--- a/app/aboutme/aboutmeStyles.module.css
+++ b/app/aboutme/aboutmeStyles.module.css
@@ -2,3 +2,13 @@
     font-size: calc(.6vw + 12px);
     margin-left: 2%;
 }
+
+.paragraphContainerLeft{
+    width: calc(50vw + 50px);
+    margin-right: 2vw;
+}
+
+.paragraphContainerRight{
+    width: calc(50vw + 50px);
+    margin-left: 2vw;
+}
