--- a/components/App.module.css
+++ b/components/App.module.css
@@ -26,11 +26,12 @@
 }
 
 .cardTitle{
-    flex-direction: column;
     height: calc(1vw);
     align-items: center;
-    margin-bottom: 10px;
-    margin-top: -12px;
+    justify-content: center;
+    text-overflow:ellipsis;
+    margin-bottom: calc(.3vw - 15px);
+    margin-top: .5vw;
 }
 
 .urlStyle{
@@ -38,4 +39,8 @@
     color: rgb(0, 81, 255);
     text-decoration: underline;
     font-size: calc(1vw + 10px)
+}
+
+.cardPicture{
+    overflow: hidden;
 }
