--- a/components/App.module.css
+++ b/components/App.module.css
@@ -5,15 +5,15 @@
 }
 
 .backgroundPressed{
-    background-color: rgb(82, 82, 82);
+    background-color: #525252;
     width: calc(120px + 5vw);
-    height: calc(5vw + 50px);
+    height: calc(6vw + 30px);
 }
 
 .backgroundUnpressed{
     background-color: rgb(32, 32, 32);
     width: calc(120px + 5vw);
-    height: calc(5vw + 50px);
+    height: calc(6vw + 37px);
 }
 
 .mainContentStyle{
@@ -26,10 +26,9 @@
 }
 
 .cardTitle{
-    height: calc(1vw);
     align-items: center;
     justify-content: center;
-    text-overflow:ellipsis;
+    height: calc(1vw);
     margin-bottom: calc(.3vw - 15px);
     margin-top: .5vw;
 }
@@ -43,4 +42,6 @@
 
 .cardPicture{
     overflow: hidden;
+    padding-bottom: 20px;
+    height: 1vw;
 }
